--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -17,8 +17,8 @@ jobs:
       uses: peter-evans/create-pull-request@v5
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main  # Branch de destino para o PR
-        base: main
+        branch: main
+        base: ${{ github.ref_name }}
         head: ${{ github.ref_name }}
         title: 'PR automático de ${{ github.ref_name }} para main'
         body: 'Este é um pull request criado de forma automática de ${{ github.ref_name }} para main.'
