--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -6,8 +6,8 @@ on:
       - 'feature/**'
 
 permissions:
-  contents: write  # Dá permissão de escrita para o token
-  
+  contents: write
+
 jobs:
   create-pull-request:
     runs-on: ubuntu-latest
@@ -16,12 +16,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Create a Pull Request
-      uses: peter-evans/create-pull-request@v5
+    - name: Set up GitHub CLI
+      uses: actions/setup-node@v3
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        base: main
-        head: ${{ github.ref_name }}
-        title: 'PR automático de ${{ github.ref_name }} para main'
-        body: 'Este é um pull request criado de forma automática de ${{ github.ref_name }} para main.'
-        draft: false  # Certifique-se de que o PR não será criado como rascunho
+        node-version: '16'
+
+    - name: Install GitHub CLI
+      run: |
+        npm install -g @githubnext/github
+
+    - name: Create Pull Request using gh
+      run: |
+        gh pr create --base main --head ${{ github.ref_name }} --title "PR automático de ${{ github.ref_name }} para main" --body "Este é um PR automático de ${{ github.ref_name }} para main."
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
