--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -16,14 +16,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up GitHub CLI
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-
     - name: Install GitHub CLI
       run: |
-        npm install -g @githubnext/github
+        sudo apt-get update
+        sudo apt-get install -y gh
+
+    - name: Authenticate GitHub CLI
+      run: |
+        gh auth setup-git
+        echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
     - name: Create Pull Request using gh
       run: |
