--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -21,13 +21,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y gh
 
-    - name: Authenticate GitHub CLI
-      run: |
-        gh auth setup-git
-        echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
-
     - name: Create Pull Request using gh
       run: |
         gh pr create --base main --head ${{ github.ref_name }} --title "PR automático de ${{ github.ref_name }} para main" --body "Este é um PR automático de ${{ github.ref_name }} para main."
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
