--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -25,5 +25,4 @@ jobs:
       run: |
         gh pr create --base main --head ${{ github.ref_name }} --title "PR automático de ${{ github.ref_name }} para main" --body "Este é um PR automático de ${{ github.ref_name }} para main."
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.PAT_TOKEN }}
