--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -21,7 +21,15 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y gh
 
-    - name: Create Pull Request using gh
+    - name: Check if PR exists
+      id: check_pr
+      run: |
+        gh pr list --base main --head ${{ github.ref_name }} --state open
+      env:
+        GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+
+    - name: Create Pull Request if none exists
+      if: steps.check_pr.outputs.stdout == ''
       run: |
         gh pr create --base main --head ${{ github.ref_name }} --title "PR automático de ${{ github.ref_name }} para main" --body "Este é um PR automático de ${{ github.ref_name }} para main."
       env:
