--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -29,7 +29,7 @@ jobs:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
 
     - name: Create Pull Request if none exists
-      if: steps.check_pr.outputs.stdout == ''
+      if: ${{ steps.check_pr.outputs.exit_code }} == '1'
       run: |
         gh pr create --base main --head ${{ github.ref_name }} --title "PR automático de ${{ github.ref_name }} para main" --body "Este é um PR automático de ${{ github.ref_name }} para main."
       env:
